src/calypso/bindings/functions.py


    lib.PlxPci_EepromCrcGet.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(c_uint32),
        POINTER(c_uint8),
    ]
    lib.PlxPci_EepromCrcGet.restype = PLX_STATUS

    lib.PlxPci_EepromReadByOffset.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint32,
        POINTER(c_uint32),
    ]
    lib.PlxPci_EepromReadByOffset.restype = PLX_STATUS

    lib.PlxPci_EepromWriteByOffset.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint32,
        c_uint32,
    ]
    lib.PlxPci_EepromWriteByOffset.restype = PLX_STATUS

    lib.PlxPci_EepromReadByOffset_16.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint32,
        POINTER(c_uint16),
    ]
    lib.PlxPci_EepromReadByOffset_16.restype = PLX_STATUS

    lib.PlxPci_EepromWriteByOffset_16.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint32,
        c_uint16,
    ]
    lib.PlxPci_EepromWriteByOffset_16.restype = PLX_STATUS

    # ==========================================
    #   SPI Flash Functions
    # ==========================================

    lib.PlxPci_SpiFlashPropGet.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
        POINTER(PEX_SPI_OBJ),
    ]
    lib.PlxPci_SpiFlashPropGet.restype = PLX_STATUS

    lib.PlxPci_SpiFlashErase.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PEX_SPI_OBJ),
        c_uint32,
        c_uint8,
    ]
    lib.PlxPci_SpiFlashErase.restype = PLX_STATUS

    lib.PlxPci_SpiFlashReadBuffer.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PEX_SPI_OBJ),
        c_uint32,
        POINTER(c_uint8),
        c_uint32,
    ]
    lib.PlxPci_SpiFlashReadBuffer.restype = PLX_STATUS

    lib.PlxPci_SpiFlashReadByOffset.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PEX_SPI_OBJ),
        c_uint32,
        POINTER(PLX_STATUS),
    ]
    lib.PlxPci_SpiFlashReadByOffset.restype = c_uint32

    lib.PlxPci_SpiFlashWriteBuffer.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PEX_SPI_OBJ),
        c_uint32,
        POINTER(c_uint8),
        c_uint32,
    ]
    lib.PlxPci_SpiFlashWriteBuffer.restype = PLX_STATUS

    lib.PlxPci_SpiFlashWriteByOffset.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PEX_SPI_OBJ),
        c_uint32,
        c_uint32,
    ]
    lib.PlxPci_SpiFlashWriteByOffset.restype = PLX_STATUS

    lib.PlxPci_SpiFlashGetStatus.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PEX_SPI_OBJ),
    ]
    lib.PlxPci_SpiFlashGetStatus.restype = PLX_STATUS

    # ==========================================
    #   VPD Functions
    # ==========================================

    lib.PlxPci_VpdRead.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint16,
        POINTER(PLX_STATUS),
    ]
    lib.PlxPci_VpdRead.restype = c_uint32

    lib.PlxPci_VpdWrite.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint16,
        c_uint32,
    ]
    lib.PlxPci_VpdWrite.restype = PLX_STATUS

    # ==========================================
    #   DMA Functions
    # ==========================================

    lib.PlxPci_DmaChannelOpen.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
        POINTER(PLX_DMA_PROP),
    ]
    lib.PlxPci_DmaChannelOpen.restype = PLX_STATUS

    lib.PlxPci_DmaGetProperties.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
        POINTER(PLX_DMA_PROP),
    ]
    lib.PlxPci_DmaGetProperties.restype = PLX_STATUS

    lib.PlxPci_DmaSetProperties.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
        POINTER(PLX_DMA_PROP),
    ]
    lib.PlxPci_DmaSetProperties.restype = PLX_STATUS

    lib.PlxPci_DmaControl.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
        c_int,  # PLX_DMA_COMMAND
    ]
    lib.PlxPci_DmaControl.restype = PLX_STATUS

    lib.PlxPci_DmaStatus.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
    ]
    lib.PlxPci_DmaStatus.restype = PLX_STATUS

    lib.PlxPci_DmaTransferBlock.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
        POINTER(PLX_DMA_PARAMS),
        c_uint64,
    ]
    lib.PlxPci_DmaTransferBlock.restype = PLX_STATUS

    lib.PlxPci_DmaTransferUserBuffer.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
        POINTER(PLX_DMA_PARAMS),
        c_uint64,
    ]
    lib.PlxPci_DmaTransferUserBuffer.restype = PLX_STATUS

    lib.PlxPci_DmaChannelClose.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint8,
    ]
    lib.PlxPci_DmaChannelClose.restype = PLX_STATUS

    # ==========================================
    #   Performance Monitoring Functions
    # ==========================================

    lib.PlxPci_PerformanceInitializeProperties.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PLX_PERF_PROP),
    ]
    lib.PlxPci_PerformanceInitializeProperties.restype = PLX_STATUS

    lib.PlxPci_PerformanceMonitorControl.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_int,  # PLX_PERF_CMD
    ]
    lib.PlxPci_PerformanceMonitorControl.restype = PLX_STATUS

    lib.PlxPci_PerformanceResetCounters.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PLX_PERF_PROP),
        c_uint8,
    ]
    lib.PlxPci_PerformanceResetCounters.restype = PLX_STATUS

    lib.PlxPci_PerformanceGetCounters.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PLX_PERF_PROP),
        c_uint8,
    ]
    lib.PlxPci_PerformanceGetCounters.restype = PLX_STATUS

    lib.PlxPci_PerformanceCalcStatistics.argtypes = [
        POINTER(PLX_PERF_PROP),
        POINTER(PLX_PERF_STATS),
        c_uint32,
    ]
    lib.PlxPci_PerformanceCalcStatistics.restype = PLX_STATUS

    # ==========================================
    #   Multi-Host Switch Functions
    # ==========================================

    lib.PlxPci_MH_GetProperties.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(PLX_MULTI_HOST_PROP),
    ]
    lib.PlxPci_MH_GetProperties.restype = PLX_STATUS

    lib.PlxPci_MH_MigratePorts.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint16,
        c_uint16,
        c_uint32,
        BOOLEAN,
    ]
    lib.PlxPci_MH_MigratePorts.restype = PLX_STATUS

    # ==========================================
    #   Non-Transparent Port Functions
    # ==========================================

    lib.PlxPci_Nt_ReqIdProbe.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        BOOLEAN,
        POINTER(c_uint16),
    ]
    lib.PlxPci_Nt_ReqIdProbe.restype = PLX_STATUS

    lib.PlxPci_Nt_LutProperties.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint16,
        POINTER(c_uint16),
        POINTER(c_uint32),
        POINTER(BOOLEAN),
    ]
    lib.PlxPci_Nt_LutProperties.restype = PLX_STATUS

    lib.PlxPci_Nt_LutAdd.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        POINTER(c_uint16),
        c_uint16,
        c_uint32,
    ]
    lib.PlxPci_Nt_LutAdd.restype = PLX_STATUS

    lib.PlxPci_Nt_LutDisable.argtypes = [
        POINTER(PLX_DEVICE_OBJECT),
        c_uint16,
    ]
    lib.PlxPci_Nt_LutDisable.restype = PLX_STATUS


def initialize() -> ctypes.CDLL:
    """Get the loaded library and ensure prototypes are configured.

    Returns:
        The configured ctypes CDLL instance.
    """
    lib = get_library()
    setup_prototypes(lib)
    return lib
